// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dev/i18n/extractors/html extracts default messages from HTML 1`] = `
Array [
  Array [
    "kbn.dashboard.id-1",
    Object {
      "description": "Message description 1",
      "message": "Message text 1 {value}",
    },
  ],
  Array [
    "kbn.dashboard.id-2",
    Object {
      "description": undefined,
      "message": "Message text 2",
    },
  ],
  Array [
    "kbn.dashboard.id-3",
    Object {
      "description": "Message description 3",
      "message": "Message text 3",
    },
  ],
]
`;

exports[`dev/i18n/extractors/html extracts default messages from HTML with one-time binding 1`] = `
Array [
  Array [
    "kbn.id",
    Object {
      "description": undefined,
      "message": "Message text with {value}",
    },
  ],
]
`;

exports[`dev/i18n/extractors/html extracts message from i18n filter in interpolating directive 1`] = `
Array [
  Array [
    "namespace.messageId",
    Object {
      "description": undefined,
      "message": "Message",
    },
  ],
]
`;

exports[`dev/i18n/extractors/html throws on empty i18n-id 1`] = `
Array [
  Array [
    [Error: Empty "i18n-id" value in angular directive is not allowed.],
  ],
]
`;

exports[`dev/i18n/extractors/html throws on i18n filter usage in complex angular expression 1`] = `
Array [
  Array [
    [Error: Couldn't parse angular i18n expression:
Unexpected token, expected ";" (1:6):
 mode [37m[41ma[49m[39ms ('metricVis.colorModes.' + mode],
  ],
]
`;

exports[`dev/i18n/extractors/html throws on missing i18n-default-message attribute 1`] = `
Array [
  Array [
    [Error: Empty defaultMessage in angular directive is not allowed ("message-id").],
  ],
]
`;
